--- a/Aliento App/Presentation/Features/Gallery/CollectionView/GalleryItemCell.xib
+++ b/Aliento App/Presentation/Features/Gallery/CollectionView/GalleryItemCell.xib
@@ -63,7 +63,7 @@
                                 </constraints>
                             </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="faS-gY-jdt" firstAttribute="leading" secondItem="ze7-0O-SXV" secondAttribute="leading" id="Kqv-cq-EwJ"/>
                             <constraint firstAttribute="trailing" secondItem="faS-gY-jdt" secondAttribute="trailing" id="S8c-kU-mM1"/>
