--- a/Aliento App/Presentation/Features/Settings/SettingsVC.xib
+++ b/Aliento App/Presentation/Features/Settings/SettingsVC.xib
@@ -4,15 +4,15 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SettingsVC" customModule="Aliento_App" customModuleProvider="target">
             <connections>
                 <outlet property="notificationsPush" destination="sJS-gS-Q9C" id="6aR-DB-0j8"/>
-                <outlet property="theme" destination="4Fm-MD-Ut9" id="JL8-Vd-bF7"/>
+                <outlet property="switchDarkMode" destination="4Fm-MD-Ut9" id="cyx-Sm-EMa"/>
                 <outlet property="view" destination="iN0-l3-epB" id="0eK-0W-Nik"/>
             </connections>
         </placeholder>
@@ -41,13 +41,16 @@
                 </label>
                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4Fm-MD-Ut9">
                     <rect key="frame" x="349" y="113" width="51" height="31"/>
+                    <connections>
+                        <action selector="darkModeSwitch:" destination="-1" eventType="valueChanged" id="YhN-VU-QlI"/>
+                    </connections>
                 </switch>
                 <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sJS-gS-Q9C">
                     <rect key="frame" x="349" y="160" width="51" height="31"/>
                 </switch>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" name="background"/>
             <constraints>
                 <constraint firstItem="dlj-FQ-LGb" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="16" id="AIi-Cr-RKN"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="sJS-gS-Q9C" secondAttribute="trailing" constant="16" id="Oif-7b-oY8"/>
@@ -65,8 +68,8 @@
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
+        <namedColor name="background">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
